# nixon-note

./: .envrc.example  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  com.scott.note-backup.plist  com.scott.note.plist  litestream.yml  service.sh  setup-ai.sh
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/lib/: clip.js
scripts/: README.md  export-apple-notes-v2.sh  export-apple-notes.sh  import-edge-bookmarks.sh  import-homebrew.sh  import-notes.sh
src/: lib.rs  main.rs  mcp.rs
src/background/: auto_org.rs  embed.rs  mod.rs  tts.rs
src/db/: migrations.rs  mod.rs  queries.rs
src/routes/: audio.rs  chat.rs  chat_stream.rs  export.rs  ingest.rs  mod.rs  notes.rs  settings.rs  status.rs  tags.rs  usage.rs  voice.rs
tests/: gemini_backend_tests.rs  ingest_tests.rs
tests/common/: mod.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  setupTests.ts
web/src/components/: AudioPlayer.tsx  CaptureInput.tsx  ChatInterface.test.tsx  ChatInterface.tsx  CodeBlock.tsx  DailyDigest.tsx  NoteCard.tsx  NoteModal.tsx  NoteSidePanel.tsx  NoteSkeleton.tsx  Rediscover.tsx  SearchBar.tsx  Settings.tsx  TagFilter.tsx  TokenGate.tsx  VoiceRecorder.tsx  WelcomeBack.tsx
web/src/components/__tests__/: CaptureInput.test.tsx  ChatInterface.test.tsx  Settings.test.tsx
web/src/utils/: markdownValidator.ts
