[package]
name = "note"
version = "0.1.0"
edition = "2024"

[lib]
name = "note"
path = "src/lib.rs"

[[bin]]
name = "note"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
deadpool-sqlite = "0.9"
rusqlite_migration = "1"
sqlite-vec = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for Claude/Ollama APIs in M2)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
futures = "0.3.31"
eventsource-stream = { version = "0.2.3", features = ["default"] }

# Voice transcription with whisper
simple_transcribe_rs = "1.0"

# YouTube transcript fetching
yt-transcript-rs = "0.1"
tempfile = "3"

# Web article clipping
dom_smoothie = "0.15"
htmd = "0.5"

# Export
zip = { version = "2", default-features = false, features = ["deflate"] }

# TTS / Podcast
rss = "2.0"
mp3-duration = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"

# MCP server
rmcp = { version = "=1.4.0", features = ["server", "transport-io"] }
schemars = "0.8"

[dev-dependencies]
mockito = "1.7.2"
serde_json = "1"
tokio-test = "0.4.5"
wiremock = "0.6.5"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
